# sparta2

./: .gitignore  db.sqlite3  pyproject.toml  test.sh
.github/workflows/: ci.yml  main.yml
sparta/: local_settings.py  settings.py  urls.py
tabom/migrations/: 0001_initial.py
tabom/models/: article.py  base_model.py  user.py
tabom/services/: like_service.py
tabom/tests/: test_like_service.py
