[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["asd <pa6712@naver.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.0"
django-ninja = "0.16.1"
black = "21.12b0"
django-stubs = "1.9.0"
mypy = "0.931"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#블랙 코드스니펫
[tool.black]
line-length = 120

#mypy stubs
[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = 3.10
strict = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "sparta.settings"